# cloudcpp

clion/: .gitignore  CMakeCache.txt  CMakeLists.txt  Dockerfile  Makefile  README.md  circbuflib.h  cmake_install.cmake  main.c  main.cpp  threadtest
vscode/: .gitignore  CMakeLists.txt  Dockerfile  README.md  main.c  main.cpp
